[package]
name = "sonic-channel2"
version = "1.1.1"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
description = "Rust client for sonic search backend"
categories = ["api-bindings"]
keywords = ["sonic", "search", "client", "elasticsearch", "api"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/tianshuapp/sonic-channel"
homepage = "https://github.com/tianshuapp/sonic-channel"
documentation = "https://docs.rs/sonic-channel2"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
whatlang = "0.16.2"

[features]
default = ["search"]

ingest = []
search = []
control = []


[badges]
maintenance = { status = "actively-developed" }

# https://docs.rs/about
[package.metadata.docs.rs]
all-features = true
